--- a/.github/workflows/fetch-holidays.yml
+++ b/.github/workflows/fetch-holidays.yml
@@ -1,1 +1,44 @@
+name: Fetch Korean Public Holidays
 
+on:
+  schedule:
+    - cron: '0 15 1 * *'  # 매월 1일 00:00 KST (UTC+9이므로 UTC 15:00)
+  workflow_dispatch:  # 수동 실행 옵션
+
+jobs:
+  fetch-holidays:
+    runs-on: ubuntu-latest
+    steps:
+      # 리포지토리 체크아웃
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Python 환경 설정
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
+      # 필요한 Python 패키지 설치
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests xmltodict
+
+      # API 호출 및 JSON 변환 스크립트 실행
+      - name: Fetch and convert holiday data
+        env:
+          API_KEY: ${{ secrets.API_KEY }}  # GitHub Secrets에 저장된 API 키
+        run: |
+          python fetch_holidays.py
+
+      # 변경사항 커밋 및 푸시
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'action@github.com'
+          git add holidays_*.json
+          git commit -m "Update holiday data for $(date +%Y-%m)" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
